--- a/src/app/index-app/File/open/open.html
+++ b/src/app/index-app/File/open/open.html
@@ -1,1 +1,11 @@
-<h1>open</h1>
+<div class="content-wrap">
+    <div class="content">
+        <toolbar style="width:100%"></toolbar>
+        <div class="row">
+            <form #myform1="ngForm">
+                <form-base *ngFor="let FormData of FormDatas" [field]="FormData"></form-base>
+            </form>
+            {{myform1.value | json}}
+        </div>    
+    </div>
+</div>
