--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -59,7 +59,6 @@ a {
     color: #3c3c3c;
 }
 
-
 /*-----ng-form------------*/
 
 .ng-valid[required],
@@ -97,8 +96,8 @@ a {
 }
 
 .ui-dropdown-label {
-    text-indent: 10px;
-    padding: 2px!important;
+    text-indent: 6px;
+    padding: 3px!important;
 }
 
 .ui-dropdown.ui-widget .ui-dropdown-trigger .fa,
@@ -123,7 +122,7 @@ a {
 }
 
 .ui-panel .ui-panel-content {
-    padding: 0.5em 0!important;
+    padding: 0.5em !important;
 }
 
 .ui-datatable-odd {
@@ -152,28 +151,29 @@ button {
 
 input[type="text"],
 input[type="password"] {
-    height: 18px;
+    box-sizing: border-box;
+    height: 23px;
     padding: 2px 0;
     border: 1px solid #ccc;
     border-radius: 3px;
     text-indent: 4px;
     flex: 1;
+    min-width: 50px;
 }
 
 .row {
     margin-bottom: 8px;
 }
 
-.content .ui-g .text-exp {
-    display: block;
-    float: left;
+.text-exp {
+    display: inline-table;
     text-align: right;
     width: 96px;
     padding: 3px 5px 3px 0;
 }
 
-.content .ui-g label.flex-box,
-.content .ui-g div.flex-box {
+label.flex-box,
+div.flex-box {
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
@@ -181,6 +181,9 @@ input[type="password"] {
     display: flex;
 }
 
-.content .ui-g div.flex-box .out-com {
+.out-com {
     flex: 1;
+}
+.mb8{
+    margin-bottom: 8px;
 }
