--- a/src/app/index-app/index-app.html
+++ b/src/app/index-app/index-app.html
@@ -8,4 +8,7 @@
         </nav> 
     </div>  
 </div>
-<router-outlet></router-outlet>
+<div class="app-container">
+    <router-outlet></router-outlet>
+</div>
+
