--- a/src/app/index-app/sider-nav/sider-nav.component.css
+++ b/src/app/index-app/sider-nav/sider-nav.component.css
@@ -2,8 +2,11 @@
 * @Author: anchen
 * @Date:   2016-11-14 15:08:47
 * @Last Modified by:   anchen
-* @Last Modified time: 2016-11-18 20:20:26
+* @Last Modified time: 2016-11-21 11:14:52
 */
+ul,li{
+    padding: 0;
+}
 li.hidden-folded{
     padding: 0;
 }
@@ -60,3 +63,18 @@ i.fa{
 .show .dis{
     display: block;
 }
+.navbar{
+    position: fixed;
+    left: 200px;
+    right:0;
+    top: 50px;
+    min-height: 40px;
+}
+/*.navbar > .navbar-list{
+    height: 100%;
+    line-height: 20px;
+}
+.navbar > .navbar-list > li{
+    width: 80px;
+    text-align: center;
+}*/
