--- a/src/app/index-app/sider-nav/sider-nav.component.html
+++ b/src/app/index-app/sider-nav/sider-nav.component.html
@@ -4,20 +4,20 @@
     <a translate="aside.nav.HEADER" routerLink="./home" routerLinkActive="active">Home</a>
   </li>
   <li *ngFor="let datas of data">
-    <div class="auto" (click)="datas.show = !datas.show">
+    <div class="auto" (click)="datas.show = !datas.show;onSelect(datas)">
       <span class="pull-right text-muted">
-        <i [ngClass]="{'fa':true, 'fa-fw':true, 'fa-chevron-down':datas.show, 'fa-chevron-up':!datas.show}"></i>
+        <i [ngClass]="{'fa':true, 'fa-fw':true, 'fa-chevron-down':datas!=selectData, 'fa-chevron-up':datas===selectData}"></i>
       </span>
       <i class="fa {{datas.icon}}"></i>
       <span class="font-bold" translate="aside.nav.DASHBOARD">{{datas.label}}</span>
     </div>
-    <div [hidden]="datas.show">
+    <div [hidden]="datas!=selectData">
         <div class="sec" *ngFor="let items of datas.items">
         <div class="font-bold" (click)="items.show = !items.show" *ngIf="items.items"><span [ngClass]="{'fa':true, 'fa-plus':items.show,'fa-minus':!items.show }" *ngIf="items.items"></span> {{items.label}}</div>
-        <a id="sec" (click)="items.show = !items.show" *ngIf="!items.items" routerLink="./{{datas.label}}/{{items.label}}" routerLinkActive="active"><span [ngClass]="{'fa':true, 'fa-plus':items.show,'fa-minus':!items.show }" *ngIf="items.items"></span> {{items.label}}</a>
+        <a id="sec" (click)="items.show = !items.show;addTab(datas.label,items.label)" *ngIf="!items.items" routerLink="./{{datas.label}}/{{items.label}}" routerLinkActive="active"><span [ngClass]="{'fa':true, 'fa-plus':items.show,'fa-minus':!items.show }" *ngIf="items.items"></span> {{items.label}}</a>
         <ul class="nav" *ngIf="items.items" [hidden]="items.show">
           <li *ngFor="let menu of items.items" class="abc">
-              <a [routerLink]="['./',items.label,menu.label]" routerLinkActive="active">
+              <a [routerLink]="['./',items.label,menu.label]" routerLinkActive="active" (click)="addTab(items.label,menu.label)">
                 <span class="fa fa-file"></span>
                 <span>{{menu.label}}</span>
               </a>
@@ -25,10 +25,23 @@
         </ul>
       </div>
     </div>
-    
-
   </li>
-
+  <div class="navbar">
+     <ul class="navbar-list nav nav-tabs">
+         <li>
+            <a type="button" class="btn btn-sm btn-default">
+                Home
+            </a>
+        </li>
+         <li *ngFor="let item of tabs">
+             <a (click)="tabTo(item.one,item.two)" type="button" class="btn btn-sm btn-default">
+                {{item.two}}
+                <i class="fa fa-close fa-fw"></i>
+            </a>
+         </li>
+     </ul>   
+  </div>
 </ul>
+<button (click)="getDataYY()">TESTHTTP</button>
 
 <!-- / list -->
