--- a/src/css/app.css
+++ b/src/css/app.css
@@ -12,7 +12,10 @@ body {
   -webkit-font-smoothing: antialiased;
   line-height: 1.42857143;
   color: #58666e;
-  background-color: transparent;
+  background-color: #fff;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  user-select: none;
 }
 
 *:focus {
