--- a/src/app/index-app/index-app.css
+++ b/src/app/index-app/index-app.css
@@ -2,7 +2,7 @@
 * @Author: anchen
 * @Date:   2016-11-19 13:57:26
 * @Last Modified by:   anchen
-* @Last Modified time: 2016-11-21 09:54:50
+* @Last Modified time: 2016-11-23 16:36:54
 */
 .app-header{
     width:100%;
@@ -14,7 +14,7 @@
     position: fixed;
     top: 50px;
     left: 0;
-    bottom: 0;
+    bottom: 30px;
     overflow-y: auto;
 }
 .app-container{
@@ -23,4 +23,14 @@
     box-sizing: border-box;
     padding-top: 90px;
     padding-left: 200px;
+    padding-bottom: 30px;
+    overflow: auto;
+}
+.app-footer{
+    height: 30px;
+    line-height: 30px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin-left: 0;
 }
