--- a/src/app/index-app/index-app.html
+++ b/src/app/index-app/index-app.html
@@ -11,4 +11,7 @@
 <div class="app-container">
     <router-outlet></router-outlet>
 </div>
+<div class="app-footer">
+    <app-footer></app-footer>
+</div>
 
