修改core目录下服务

--- a/src/app/index-app/sider-nav/sider-nav.component.html
+++ b/src/app/index-app/sider-nav/sider-nav.component.html
@@ -57,7 +57,7 @@
         </div>
     </div>
 </ul>
-<button (click)="getDataYY()">TESTHTTP</button>
+<button (click)="getMenuData()">TESTHTTP</button>
 
 
 <!-- / list -->
