--- a/src/app/login-app/login-app.component.css
+++ b/src/app/login-app/login-app.component.css
@@ -2,7 +2,7 @@
 * @Author: anchen
 * @Date:   2016-11-22 15:49:34
 * @Last Modified by:   anchen
-* @Last Modified time: 2016-11-22 17:02:10
+* @Last Modified time: 2016-11-25 11:06:22
 */
 
 .block {
@@ -52,7 +52,7 @@ html,body {
     display:block;
     width: 100%;
     height: 100%;
-    background: url("./img/logo-login.png") no-repeat center;
+    background: url("./assets/img/logo-login.png") no-repeat center;
     background-size:contain;
     margin-top: -8%;
 }
