--- a/src/app/index-app/index-app.html
+++ b/src/app/index-app/index-app.html
@@ -1,17 +1,24 @@
-<div class="app-header navbar">
+<!-- header start  -->
+<header class="app-header navbar">
     <app-header></app-header>
-</div>
-<div class="app-aside hidden-xs bg-black">
-    <div calss="navi-wrap">
-       <nav class="navi">
-       <app-sider-nav></app-sider-nav> 
-        </nav> 
-    </div>  
-</div>
-<div class="app-container">
-    <router-outlet></router-outlet>
-</div>
-<div class="app-footer">
-    <app-footer></app-footer>
-</div>
+</header>
+<!-- header end  -->
 
+<!-- content start  -->
+<section class="app-aside hidden-xs bg-black">
+    <div calss="navi-wrap">
+        <nav class="navi">
+            <app-sider-nav></app-sider-nav>
+        </nav>
+    </div>
+</section>
+<section class="app-container">
+    <router-outlet></router-outlet>
+</section>
+<!-- content end  -->
+
+<!-- footer start  -->
+<footer class="app-footer">
+    <app-footer></app-footer>
+</footer>
+<!-- footer end  -->
