--- a/src/app/login-app/login-app.html
+++ b/src/app/login-app/login-app.html
@@ -1,9 +1,9 @@
-<div class="header">
+<header class="header">
     <i class="ace-icon fa fa-leaf green"></i>
     <span class="">猿猿科技</span>
     <span class="" id="id-text2">ERP</span>
-</div>
-<div class="contain clearfix">
+</header>
+<section class="contain clearfix">
     <div class="logo-box">
         <a></a>
     </div>
@@ -43,20 +43,6 @@
             </div>
         </div>
     </div>
-</div>
+</section>
 
-<div class='footer' id="id-company-text">©&nbsp;集群车宝</div>
-<div class="privilege-mask">
-    <div class="privilege">
-        <div class="privilege-title clearfix">
-            <span>选择权限</span>
-            <span class=''></span>
-        </div>
-        <div class="user-privilege clearfix">
-            <div class="data-header">
-                <span>本地角色编码</span>
-                <span>本地角色名称</span> 
-            </div>
-        </div>
-    </div>
-</div>
+<footer class='footer' id="id-company-text">©&nbsp;集群车宝</footer>
