--- a/src/app/index-app/index-app.css
+++ b/src/app/index-app/index-app.css
@@ -4,24 +4,36 @@
 * @Last Modified by:   anchen
 * @Last Modified time: 2016-11-23 16:36:54
 */
+header,section,footer{
+    box-sizing: border-box;
+}
 .app-header{
     width:100%;
+    height: 70px;
     position: fixed;
     top: 0;
     left: 0;
 }
 .app-aside{
+    width: 200px;
     position: fixed;
-    top: 50px;
+    top: 70px;
     left: 0;
     bottom: 30px;
-    overflow-y: auto;
+    /*background-color: #fafafa;
+    border-right: 1px solid #e4e4e4;*/
+    background-color: #cccccc;
+    background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #e1e1e1), color-stop(100%, #b3b3b3));
+    background-image: -webkit-linear-gradient(top, #e1e1e1, #b3b3b3);
+    background-image: -moz-linear-gradient(top, #e1e1e1, #b3b3b3);
+    background-image: -o-linear-gradient(top, #e1e1e1, #b3b3b3);
+    background-image: linear-gradient(top, #e1e1e1, #b3b3b3);
 }
 .app-container{
     height: 100%;
     width: 100%;
     box-sizing: border-box;
-    padding-top: 90px;
+    padding-top: 110px;
     padding-left: 200px;
     padding-bottom: 30px;
     overflow: auto;
@@ -31,6 +43,6 @@
     line-height: 30px;
     position: absolute;
     bottom: 0;
-    left: 0;
-    margin-left: 0;
+    left: 0px;
+    right: 0;
 }
