--- a/src/app/login-app/login-app.component.css
+++ b/src/app/login-app/login-app.component.css
@@ -4,7 +4,16 @@
 * @Last Modified by:   anchen
 * @Last Modified time: 2016-11-25 11:06:22
 */
-
+*{
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+*:before, *:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 .block {
     display: block;
 }
@@ -31,7 +40,10 @@ html,body {
     font: 400 36px/70px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-
+label{
+    margin-bottom: 5px;
+    font-weight: 700;
+}
 .contain {
     height: calc(100% - 100px);
     position: relative;
@@ -99,110 +111,81 @@ html,body {
     display: block;
     width: 30px;
 }
-
+.form-control {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+.form-control:focus{
+    border-color: #66afe9;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+}
 .contain .login-box .form-control {
     margin-left: 10px;
     margin-right: 20px;
     width: calc(100% - 30px);
 }
-
-
+.btn {
+    display: inline-block;
+    font-weight: 500;
+    border-radius: 2px;
+    outline: 0!important;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+}
+.clearfix button {
+    margin-right: 20px;
+}
+.btn-sm{
+    padding: 5px 10px;
+    font-size: 12px;
+    line-height: 1.5;
+}
+.btn-primary{
+    color: #fff;
+    background-color: #7266ba;
+    border-color: #7266ba;
+}
+.btn[disabled]{
+    pointer-events: none;
+    cursor: not-allowed;
+    filter: alpha(opacity=65);
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    opacity: .65;
+}
+.btn-primary[disabled]{
+    background-color: #7266ba;
+    border-color: #7266ba;
+}
 .footer {
     width: 100%;
     position: absolute;
     bottom: 0;
     text-align: center;
     font: 700 16px/30px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-
-.privilege-mask {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    display: none;
-    left: 0;
-    top: 0;
-    background-color: rgba(0,0,0,0.3);
-}
-.privilege-mask .privilege {
-    width: 500px;
-    height: 320px;
-    border: 1px solid #95B8E7;
-    border-radius: 5px;
-    background-color: #E0ECFF;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate( -50%,-50% );
-}
-.privilege-mask .privilege-title {
-
-}
-.privilege-mask .privilege-title span {
-    font-weight: bold;
-    color: #0E2D5F;
-    font-size: 16px;
-    line-height: 30px;
-}
-.privilege-mask .privilege-title span:first-child {
-    float: left;
-    margin-left: 6px;
-}
-.privilege-mask .privilege-title span:last-child {
-    float: right;
-    color: #333;
-    font-size: 20px;
-    margin-right: 15px;
-    cursor: pointer;
-}
-
-.privilege-mask .user-privilege {
-    width: 98%;
-    margin: 0 auto;
-    height: 284px;
-    position: relative;
-    background-color: #fff;
-    border: 1px solid #95B8E7;
-}
-.privilege-mask .user-privilege div {
-    overflow: hidden;
-}
-.privilege-mask .user-privilege div span {
-    display: inline-block;
-    text-align: center;
-    border-top: 1px solid #ccc;
-    border-right: 1px solid #ccc;
-    height: 28px;
-    width: 40%;
-    float: left;
-    font: 400 14px/28px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-.privilege-mask .user-privilege div span:last-child {
-    width: 60%;
-}
-.privilege-mask .user-privilege .data-header span {
-    background-color: #f5f5f5;
-    font-weight: bold;
-    border-top: none;
-    /*border-right-style: dashed;*/
-}
-.privilege-mask .user-privilege div span:last-child {
-    border-right: none;
-}
-
-.privilege-mask .user-privilege .data-header span:last-child {
-    border-right: none;
-}
-
-.privilege-mask .user-privilege div:last-child span {
-    border-bottom: 1px solid #ccc;
-}
-
-.privilege-mask .user-privilege div:nth-child(n + 2) {
-    cursor: pointer;
-}
-
-.privilege-mask .user-privilege div:nth-child(n + 2):hover {
-    background-color: #FBEC88;
 }
