--- a/src/app/index-app/sider-nav/sider-nav.component.html
+++ b/src/app/index-app/sider-nav/sider-nav.component.html
@@ -1,18 +1,21 @@
 <!-- list -->
 <ul class="nav">
     <li>
-        <a class="home" translate="aside.nav.HEADER" (click)="tabTo('index','home')" [class.active]="active==='home'">Home</a>
+        <a class="home" translate="aside.nav.HEADER" (click)="tabTo('index','home')" [class.active]="active==='home'">
+            <i class="fa fa-home"></i>
+            <span>Home</span>
+        </a>
     </li>
     <li *ngFor="let datas of data">
-        <div class="auto" (click)="datas.show = !datas.show;onSelect(datas)">
+        <a [class.active]="datas===selectData" (click)="datas.show = !datas.show;onSelect(datas)">
             <span class="pull-right text-muted">
             <i [ngClass]="{'fa':true, 'fa-fw':true, 'fa-chevron-down':datas!=selectData, 'fa-chevron-up':datas===selectData}"></i>
             </span>
             <i class="fa {{datas.icon}}"></i>
-            <span class="font-bold" translate="aside.nav.DASHBOARD">{{datas.label}}</span>
-        </div>
-        <div [hidden]="datas!=selectData">
-            <div class="sec" *ngFor="let items of datas.items">
+            <span class="font-bold">{{datas.label}}</span>
+        </a>
+        <ul [hidden]="datas!=selectData">
+            <li class="sec" *ngFor="let items of datas.items">
                 <div class="font-bold" (click)="items.show = !items.show" *ngIf="items.items"><span [ngClass]="{'fa':true, 'fa-plus':items.show,'fa-minus':!items.show }" *ngIf="items.items"></span> {{items.label}}</div>
                 <a id="sec" (click)="items.show = !items.show;addTab(datas.label,items.label)" *ngIf="!items.items" [class.active]="active===items.label"><span [ngClass]="{'fa':true, 'fa-plus':items.show,'fa-minus':!items.show }" *ngIf="items.items"></span> {{items.label}}</a>
                 <ul class="nav-list" *ngIf="items.items" [hidden]="items.show">
@@ -23,24 +26,14 @@
                         </a>
                     </li>
                 </ul>
-            </div>
-        </div>
+            </li>
+        </ul>
     </li>
-    <!--   <div class="navbar">
-     <ul class="navbar-list nav nav-tabs">
-         <li *ngFor="let item of tabs;let index = index">
-
-             <a (click)="tabTo(item.one,item.two)" type="button" class="btn btn-sm btn-default" [ngClass]="{'active':active === item.two}">
-                {{item.two}}
-                <i class="fa fa-close fa-fw" (click)="closeTab(item.two)" *ngIf="index>0"></i>
-            </a>
-         </li>
-     </ul>   
-  </div> -->
-    <div class>
+    <div class="top-bar">
         <div class="chrome-tabs-shell">
             <ul class="chrome-tabs">
-                <li class="chrome-tab" *ngFor="let item of tabs;let index = index" (click)="tabTo(item.one,item.two)" [ngClass]="{'chrome-tab-current':active === item.two}" [ngStyle]="{'z-index': index+1}">
+                <li class="chrome-tab" *ngFor="let item of tabs;let index = index" (click)="tabTo(item.one,item.two)" [ngClass]="{'chrome-tab-current':active === item.two}"
+                    [ngStyle]="{'z-index': index+1}">
                     <div class="chrome-tab-title">{{item.two}}</div>
                     <div class="chrome-tab-close" (click)="closeTab(item.two)" *ngIf="index>0"></div>
                     <div class="chrome-tab-curves">
@@ -54,6 +47,24 @@
                 </li>
             </ul>
             <div class="chrome-shell-bottom-bar"></div>
+        </div>
+        <div class="pos-exp">
+            <ul>
+                <li><i class="fa fa-home"></i><a>首页</a>
+                </li>
+                <li [hidden]="active==='home'"><i class="fa fa-angle-right"></i><a>{{active}}</a>
+                </li>
+            </ul>
+            <div class="process">
+                <ul>
+                    <li class="before">上一步流程
+                    </li>
+                    <li class="center">当前流程
+                    </li>
+                    <li class="after">下一步流程
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </ul>
