--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,7 +4,7 @@
     <div class="ui-g-6">
         <div class="ui-g-2">
             <span>人员：</span>
-            <span>{{user.obj.CZYMC}}</span>
+            <span>{{user? user.obj.CZYMC : ''}}</span>
         </div>
         <div class="ui-g-4">
            <span>岗位：</span>
