--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<div class="ui-g">
+<div class="ui-g toolbar">
     <div class="ui-g-1">
         <button pButton type="text" (click)="add()" icon="fa-plus-square" [disabled]="!toggle" label="新增"></button>
     </div>
