--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -7,23 +7,99 @@ html,body{
     height: 100%;
 }
 html {
-    font-size: 10px;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 body{
     font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 14px;
+    font-size: 12px;
     -webkit-font-smoothing: antialiased;
-    line-height: 1.42857143;
-    color: #58666e;
+    line-height: 1.5;
+    color: #393939;
     background-color: #fff;
     -moz-user-select: none;
     -khtml-user-select: none;
     user-select: none;
+    overflow: hidden;
 }
 ul,li{
     list-style: none;
 }
 i{
     font-style: normal;
+}
+form{
+    display: block;
+}
+a{
+    text-decoration: none;
+    color: #3c3c3c;
+}
+/*-----ng-form------------*/
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948!important; /* green */
+}
+
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442!important; /* red */
+}
+
+/*------ui-g reset------------*/
+.ui-g-1, .ui-g-2, .ui-g-3, .ui-g-4, .ui-g-5, .ui-g-6, .ui-g-7, .ui-g-8, .ui-g-9, .ui-g-10, .ui-g-11, .ui-g-12{
+    padding: 0!important;
+}
+.ui-dropdown{
+    display: block!important;
+    width: auto!important;
+}
+.ui-dropdown-label{
+    text-indent: 10px;
+    padding: 2px!important;
+}
+.ui-dropdown.ui-widget .ui-dropdown-trigger .fa, .ui-multiselect.ui-widget .ui-multiselect-trigger .fa{
+    margin-top: 4px!important;
+}
+.ui-accordion .ui-accordion-content{
+    overflow: inherit!important;
+}
+/*-------content------- */
+.content-wrap{
+    width: 100%;
+}
+.content{
+    padding-left: 25px;
+    padding-right: 120px;
+}
+button{
+    width: 78px;
+}
+.input-group{
+    height: 30px;
+}
+input[type="text"],input[type="password"]{
+    height: 18px;
+    padding: 2px 0;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    text-indent: 4px;
+    flex: 1;
+}
+/*.row{
+    margin-top: 15px;
+}*/
+.content .ui-g .text-exp{
+    display: block;
+    float: left;
+    text-align: right;
+    width: 96px;
+    padding: 3px 5px 3px 0;
+}
+.content .ui-g label.flex-box,.content .ui-g div.flex-box{
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+}
+.content .ui-g div.flex-box .out-com{
+    flex: 1;
 }
