--- a/src/assets/css/google-tabs.css
+++ b/src/assets/css/google-tabs.css
@@ -6,7 +6,7 @@
   background-image: -moz-linear-gradient(top, #e1e1e1, #b3b3b3);
   background-image: -o-linear-gradient(top, #e1e1e1, #b3b3b3);
   background-image: linear-gradient(top, #e1e1e1, #b3b3b3);
-  padding: 10px 10px 6px 10px;
+  padding: 5px 10px 5px 10px;
   -webkit-border-radius: 4px 4px 0 0;
   -moz-border-radius: 4px 4px 0 0;
   -ms-border-radius: 4px 4px 0 0;
@@ -18,7 +18,7 @@
 .chrome-tabs-shell .chrome-shell-bottom-bar {
   position: absolute;
   bottom: 0px;
-  height: 6px;
+  height: 5px;
   left: 0px;
   width: 100%;
   border-top: 1px solid rgba(0, 0, 0, 0.35);
@@ -62,6 +62,7 @@
 }
 .chrome-tabs * {
   -webkit-user-select: none;
+  user-select: none;
   cursor: default;
   font-family: "Lucida Grande", "Lucida Sans Unicode", Verdana, Arial, Helvetica, sans-serif;
   font-size: 11px;
